--- a/css/css-style.css
+++ b/css/css-style.css
@@ -38,68 +38,51 @@
   }
 
 
-  .box {
+  
+  
+  .box1 {
+	width: 60vw;
 	margin: 50px auto;
-	background: rgb(192,166,244)!important;
+	border: 4px solid #e7c9eb;
 	padding: 20px;
 	text-align: center;
 	font-weight: 900;
-	color: #fff;
+	color: black;
 	font-family: arial;
 	position: relative;
   }
   
-  .sb1:before {
+  
+  /* speech bubble 5 */
+  
+  .sb5:before {
 	content: "";
 	width: 0px;
 	height: 0px;
 	position: absolute;
-	border-left: 10px solid rgb(192,166,244)!important;
+	border-left: 10px solid #e7c9eb;
 	border-right: 10px solid transparent;
-	border-top: 10px solid rgb(192,166,244)!important;
+	border-top: 10px solid #e7c9eb;
 	border-bottom: 10px solid transparent;
-	right: -19px;
+	right: -21px;
 	top: 6px;
   }
   
-  .sb2:before {
+  .sb5:after {
 	content: "";
 	width: 0px;
 	height: 0px;
 	position: absolute;
-	border-left: 10px solid transparent;
-	border-right: 10px solid rgb(192,166,244)!important;
-	border-top: 10px solid rgb(192,166,244)!important;
-	border-bottom: 10px solid transparent;
-	left: -19px;
-	top: 6px;
+	border-left: 7px solid #fff;
+	border-right: 7px solid transparent;
+	border-top: 7px solid #fff;
+	border-bottom: 7px solid transparent;
+	right: -11px;
+	top: 10px;
   }
   
-  .sb3:before {
-	content: "";
-	width: 0px;
-	height: 0px;
-	position: absolute;
-	border-left: 10px solid rgb(192,166,244)!important;
-	border-right: 10px solid transparent;
-	border-top: 10px solid rgb(192,166,244)!important;
-	border-bottom: 10px solid transparent;
-	left: 19px;
-	bottom: -19px;
-  }
   
-  .sb4:before {
-	content: "";
-	width: 0px;
-	height: 0px;
-	position: absolute;
-	border-left: 10px solid transparent;
-	border-right: 10px solid rgb(192,166,244)!important;
-	border-top: 10px solid rgb(192,166,244)!important;
-	border-bottom: 10px solid transparent;
-	right: 19px;
-	bottom: -19px;
-  }
+  
   
 /*------------------------------------------------*/
 /*-----------------[BASIC STYLES]-----------------*/
