--- a/css/css-style.css
+++ b/css/css-style.css
@@ -1148,3 +1148,113 @@ margin-right: -66px !important; }
 .et_monarch .et_social_slidedown.et_social_animated, .et_monarch .et_social_animated .et_social_slidedown { opacity: 1; -webkit-animation: et_social_fadeInBottom 1s 1 cubic-bezier(0.77,0,.175,1); -moz-animation: et_social_fadeInBottom 1s 1 cubic-bezier(0.77,0,.175,1); -o-animation: et_social_fadeInBottom 1s 1 cubic-bezier(0.77,0,.175,1); animation: et_social_fadeInBottom 1s 1 cubic-bezier(0.77,0,.175,1); }
 .et_monarch .et_social_slideup.et_social_animated, .et_monarch .et_social_animated .et_social_slideup { opacity: 1; -webkit-animation: et_social_fadeInTop 1s 1 cubic-bezier(0.77,0,.175,1); -moz-animation: et_social_fadeInTop 1s 1 cubic-bezier(0.77,0,.175,1); -o-animation: et_social_fadeInTop 1s 1 cubic-bezier(0.77,0,.175,1); animation: et_social_fadeInTop 1s 1 cubic-bezier(0.77,0,.175,1); }
 .et_monarch .et_social_no_animation.et_social_animated, .et_monarch .et_social_animated .et_social_no_animation { opacity: 1; }
+
+
+p,
+q {
+  font-size: 1.2rem;
+}
+
+q {
+  font-weight: 500;
+  line-height: 1.5rem;
+}
+
+p {
+  color: #e6c8ea;
+}
+
+.customer-revs {
+  margin: 0 auto 0 auto;
+}
+
+.author {
+	font-size: x-large;
+	font-weight: bold;
+}
+.rectangle {
+  width: 40%;
+  height: 100vh;
+  background: #e6c8ea;
+
+  position: absolute;
+  right: 0;
+  top: 0;
+  bottom: 0;
+}
+
+/* slideshow container */
+.slideshow-container {
+  position: relative;
+  width: 60rem;
+  max-width: 80%;
+  margin: 0 auto;
+}
+
+/* Slides */
+.mySlides {
+  display: none;
+  padding: 2rem 5rem 0 5rem;
+  text-align: center;
+}
+
+.mySlidesContainer {
+  min-height: 5rem;
+  padding: 3.5rem 2.5rem 2rem 3.5rem;
+  background: #e6c8ea;
+}
+
+/* next & previous buttons */
+.prev,
+.next {
+  cursor: pointer;
+  position: absolute;
+  top: 55%;
+  width: auto;
+  margin-top: -1.875rem;
+  padding: 1rem;
+  color: #232323;
+  font-weight: bold;
+  font-size: 3rem;
+  border-radius: 3px;
+  user-select: none;
+  transition: 0.4s;
+}
+
+/* position the "next button" to the right */
+.next {
+  position: absolute;
+  right: 0;
+  border-radius: 3px;
+}
+
+/* on hover, add a black bg color with a little bit see-through */
+.prev:hover,
+.next:hover {
+  background-color: #000; /* fallback color */
+  background-color: rgba(0, 0, 0, 0.8);
+  color: #e6c8ea;
+  text-decoration: none;
+}
+
+/* the dot/bullet/indicator container */
+.dot-container {
+  text-align: center;
+  padding: 0 1.25rem;
+}
+
+/* the dots/bullets/indicators */
+.dot {
+  height: 0.9375rem;
+  width: 0.9375rem;
+  margin: 0 2px;
+  background-color: #e6c8ea;
+  border-radius: 50%;
+  display: inline-block;
+  transition: background-color 0.4s ease;
+}
+
+/* add bg color to the active dot/circle */
+.active {
+  background-color: #232323;
+}
